--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "7.14.1",
     "@mantine/hooks": "7.14.1",
+    "framer-motion": "^11.11.17",
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
